<resources>
    <string name="app_name">Pentas</string>
    <string name="title_medicine">Minum Obat</string>
    <string name="title_food">Makan Minum</string>
    <string name="title_bill">Bayar Tagihan</string>
    <string name="title_arisan">Arisan</string>
    <string name="title_other">Lainnya</string>
    <string name="title_setting">Pengaturan</string>
    <string name="title_delete">Hapus</string>
    <string name="title_activity_add">AddActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>